build/k8s/circle.yml
apiVersion: v1
kind: Service
metadata:
    name: circle-svc
    labels:
        app: circle
spec:
    type: ClusterIp
    ports:
        - port: 80
    selector:
        app: circle
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: circle
    labels:
        app: circle
spec:
    replicas: 3
    selector:
        matchLabels:
            app: circle
    template:
        metadata:
           labels:
              app: circle
        spec:
           containers:
              - name: circle-app
                image: gcr.io/spatiumsocialis/circle:latest
                ports:
                    - containerPort: 8080
