build/k8s/db.yml
apiVersion: v1
kind: Service
metadata:
    name: db
    labels:
        app: db
spec:
    type: ClusterIp
    ports:
        - port: 5432
    selector:
        app: db
---
apiVersion: v1
kind: Deployment
metadata:
    name: db
    labels:
        app: db
spec:
    replicas: 1
    selector:
        matchLabels:
            app: db
    template:
        metadata:
           labels:
              app: db
        spec:
           containers:
              - name: db
                image: postgres:latest
                ports:
                    - containerPort: 5432
