build/k8s/kafka.yml
apiVersion: v1
kind: Service
metadata:
    name: kafka
    labels:
        app: kafka
spec:
    type: ClusterIp
    ports:
        - port: 9092
    selector:
        app: kafka
---
apiVersion: v1
kind: Deployment
metadata:
    name: kafka
    labels:
        app: kafka
spec:
    replicas: 1
    selector:
        matchLabels:
            app: kafka
    template:
        metadata:
           labels:
              app: kafka
        spec:
           containers:
              - name: kafka
                image: wurstmeister/kafka:latest
                ports:
                    - containerPort: 9092
