build/k8s/location.yml
apiVersion: v1
kind: Service
metadata:
    name: location-svc
    labels:
        app: location
spec:
    type: ClusterIp
    ports:
        - port: 80
    selector:
        app: location
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: location
    labels:
        app: location
spec:
    replicas: 3
    selector:
        matchLabels:
            app: location
    template:
        metadata:
           labels:
              app: location
        spec:
           containers:
              - name: location-app
                image: gcr.io/spatiumsocialis/location:latest
                ports:
                    - containerPort: 8080
