build/k8s/proximity.yml
apiVersion: v1
kind: Service
metadata:
    name: proximity-svc
    labels:
        app: proximity
spec:
    type: ClusterIp
    ports:
        - port: 80
    selector:
        app: proximity
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: proximity
    labels:
        app: proximity
spec:
    replicas: 3
    selector:
        matchLabels:
            app: proximity
    template:
        metadata:
           labels:
              app: proximity
        spec:
           containers:
              - name: proximity-app
                image: gcr.io/spatiumsocialis/proximity:latest
                ports:
                    - containerPort: 8080
