build/k8s/zookeeper.yml
apiVersion: v1
kind: Service
metadata:
    name: zookeeper
    labels:
        app: zookeeper
spec:
    type: ClusterIp
    ports:
        - port: 2181 
    selector:
        app: zookeeper
---
apiVersion: v1
kind: Deployment
metadata:
    name: zookeeper
    labels:
        app: zookeeper
spec:
    replicas: 1
    selector:
        matchLabels:
            app: zookeeper
    template:
        metadata:
           labels:
              app: zookeeper
        spec:
           containers:
              - name: zookeeper
                image: wurstmeister/zookeeper:latest
                ports:
                    - containerPort: 2181
